--- a/binomial/DESCRIPTION
+++ b/binomial/DESCRIPTION
@@ -4,9 +4,9 @@ Title: Computes binomial functions
 Version: 0.1.0
 Author: Uzziel Valencia
 Maintainer: The package maintainer <uzzi.valencia@berkeley.edu>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Description: Gives various options for computing binomial distributions.
+    Also provides for numerous methods of displaying and visualizing distributions.
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
